# cefi-rs

./: Cargo.toml
cefi-rs/: Cargo.toml
cefi-rs/src/: interface_http.rs  lib.rs  trade.rs  types.rs
cefi-rs/src/exchanges/: binance.rs  bybit.rs  mod.rs
exchanges/binance/: Cargo.toml
exchanges/binance/src/: errors.rs  http.rs  lib.rs  types.rs
exchanges/binance/src/rest/: market.rs  mod.rs
exchanges/bybit/: Cargo.toml
exchanges/bybit/examples/: http.rs
exchanges/bybit/src/: errors.rs  http.rs  lib.rs  types.rs  ws.rs  ws_types.rs
exchanges/bybit/src/rest/: account.rs  market.rs  mod.rs  position.rs  trade.rs
