[package]
name = "cefi-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
async-trait = "0.1.88"
chrono = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }

binance = { path = "../exchanges/binance" }
bybit = { path = "../exchanges/bybit" }
