[package]
name = "cefi-rs"
version = "0.1.0"
description = "cefi-rs"
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
anyhow = { workspace = true }
async-trait = "0.1.88"
chrono = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }

cefi-rs-binance = { path = "../exchanges/binance", version = "0.1.0" }
cefi-rs-bybit = { path = "../exchanges/bybit", version = "0.1.0" }
