[package]
name = "bybit"
version = "0.1.0"
edition = "2024"

[profile.dev]
debug = 0

[dependencies]
anyhow = "1.0"
chrono = "0.4.38"
futures = "0.3.30"
serde_json = "1.0"
hex = "0.4.3"
hmac = "0.12.1"
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "native-tls",
] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
sha2 = "0.10.8"
strum = "0.26"
strum_macros = "0.26"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.23.1", features = ["native-tls"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2.3"
